project(setup)
cmake_minimal_required(VERSION 3.11)
# Require modern C++
set(CMAKE_CXX_STANDARDS 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#### Setup Directories ####
#Main output directory
SET(OUTPUT_DIRECTORY "${SMAKE_BINARY_DIR}/bin/")
# Output all DLLs from all libs into main build folder
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})

#### Add External Dependencies ####
add_subdirectory("lib/SFML")
set(SFML_INCS "lib/SFML/include")
link_directories("${CMAKE_BINARY_DIR}/lib/SFML/lib")

#### Practical 1 ####
add_executable(lab_1 main.cpp)
target_include_directories(lab_1 PRIVATE ${SFML_INCS})
target_link_libraries(lab_1 sfml-graphics)